<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_vertical"
    android:background="@android:color/background_light" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Home" >

        <Button
            android:id="@+id/clear"
            android:layout_width="47dp"
            android:layout_height="31dp"
            android:layout_gravity="right"
            android:layout_marginLeft="8dp"
            android:background="#3b5998"
            android:onClick="clearAllFields"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/clear"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:text="@string/ftoc"
            android:textSize="20sp"
            android:textColor="#610B21" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:maxLength="8"
                android:width="120dp" >
            </EditText>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:text="@string/leftright"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/celsius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:maxLength="8"
                android:width="120dp" />
        </LinearLayout>

        <!-- miles to km -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:paddingTop="8dp"
            android:text="@string/milestokm"
            android:textSize="20sp"
            android:textColor="#610B21" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:text="@string/leftright"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" />
        </LinearLayout>

        <!-- lb to kg -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:paddingTop="8dp"
            android:text="@string/lbtokg"
            android:textSize="20sp"
            android:textColor="#610B21" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/pounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:text="@string/leftright"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/kilograms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" />
        </LinearLayout>

        <!-- liters to gallons -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:paddingTop="8dp"
            android:text="@string/ltog"
            android:textSize="20sp"
            android:textColor="#610B21" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/gallons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:text="@string/leftright"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/liters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" />
        </LinearLayout>

        <!-- mpg to kmpl -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:text="@string/mgptokmpl"
            android:textSize="20sp"
            android:textColor="#610B21" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/mpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:text="@string/leftright"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/kmpl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" />
        </LinearLayout>

        <!-- mph to kmph -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:text="@string/mphtokmph"
            android:textSize="20sp"
            android:textColor="#610B21" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/mph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:text="@string/leftright"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/kmph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:width="120dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>